tests: compatibility with pytest>=4
* fix defining pytest_plugins in non-top-level conftest file (pytest 3+)
  https://docs.pytest.org/en/6.2.x/deprecations.html#pytest-plugins-in-non-top-level-conftest-files
* update to pytest 6 as this was the first version to support
  pyproject.toml
  https://docs.pytest.org/en/stable/changelog.html#id123

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -44,4 +44,4 @@ jobs:
         pip check
     - name: Run the tests
       run: |
-        pytest -vv --integration_tests jupyter_server
+        pytest -vv --integration_tests=true
