--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,17 @@ install_requires =
     requests-unixsocket
 
 [options.extras_require]
-test = coverage; pytest; pytest-cov; pytest-mock; requests; pytest-tornasync; pytest-console-scripts; ipykernel
+test =
+    coverage
+    pytest>=6.0
+    pytest-cov
+    pytest-mock
+    requests
+    pytest-tornasync
+    pytest-console-scripts
+    ipykernel
+    # NOTE: we cannot auto install examples/simple here because of:
+    # https://github.com/pypa/pip/issues/6658
 
 [options.entry_points]
 console_scripts =
