--- a/.github/workflows/python-linux.yml
+++ b/.github/workflows/python-linux.yml
@@ -45,17 +45,17 @@ jobs:
     - name: Run the tests
       if: ${{ matrix.python-version != 'pypy3' }}
       run: |
-        pytest -vv jupyter_server --cov jupyter_server --cov-branch --cov-report term-missing:skip-covered
+        pytest -vv --cov jupyter_server --cov-branch --cov-report term-missing:skip-covered
     - name: Run the tests on pypy
       if: ${{ matrix.python-version == 'pypy3' }}
       run: |
-        pytest -vv jupyter_server
+        pytest -vv
     - name: Install the Python dependencies for the examples
       run: |
         cd examples/simple && pip install -e .
     - name: Run the tests for the examples
       run: |
-        pytest examples/simple/tests/test_handlers.py
+        pytest examples/simple/tests/test_handlers.py --confcutdir=$PWD
     - name: Coverage
       if: ${{ matrix.python-version != 'pypy3' }}
       run: |
