--- a/.github/workflows/python-windows.yml
+++ b/.github/workflows/python-windows.yml
@@ -55,4 +55,4 @@ jobs:
           cd examples/simple && pip install -e .
       - name: Run the tests for the examples
         run: |
-          pytest examples/simple/tests/test_handlers.py --confcutdir=$PWD
+          pytest examples/simple
